--- a/layout/js.ejs
+++ b/layout/js.ejs
@@ -26,3 +26,98 @@
     }
     document.title = pagetilte;
 </script>
+
+<script>
+    const data = [
+        {
+            "id": 1,
+            "country": "衣索比亞",
+            "city": "谷吉",
+            "place": "郝瑪璉何處理廠",
+            "photo": "/coffee/assets/images/productsImg/blackCoffeeBean.png",
+            "type": "經典咖啡豆 | 中度烘焙",
+            "price": "$200~$600"
+        },
+        {
+            "id": 2,
+            "country": "衣索比亞",
+            "city": "西達摩",
+            "place": "蕾羅莎處理廠",
+            "photo": "/coffee/assets/images/productsImg/redCoffeeBean.png",
+            "type": "經典咖啡豆 | 深度烘焙",
+            "price": "$280~$600"
+        },
+        {
+            "id": 3,
+            "country": "衣索比亞",
+            "city": "谷吉",
+            "place": "罕被拉",
+            "photo": "/coffee/assets/images/productsImg/blackCoffeeBean.png",
+            "type": "經典咖啡豆 | 中度烘焙",
+            "price": "$200~$600"
+        },
+        {
+            "id": 4,
+            "country": "肯亞",
+            "city": "",
+            "place": "涅里區聯合處理廠",
+            "photo": "/coffee/assets/images/productsImg/whiteCoffeeCup.png",
+            "type": "經典咖啡豆 | 輕度烘焙",
+            "price": "$350~$600"
+        },
+        {
+            "id": 5,
+            "country": "祕魯",
+            "city": "薇拉瑞卡",
+            "place": "安迪亞斯莊園",
+            "photo": "/coffee/assets/images/productsImg/greenCoffeeCup.png",
+            "type": "經典咖啡豆 | 深度烘焙",
+            "price": "$280~$600"
+        },
+        {
+            "id": 6,
+            "country": "哥倫比亞",
+            "city": "",
+            "place": "萊姆柑橙",
+            "photo": "/coffee/assets/images/productsImg/khakiCoffeeBag.png",
+            "type": "經典咖啡豆 | 輕度烘焙",
+            "price": "$350~$600"
+        },
+        {
+            "id": 7,
+            "country": "巴西",
+            "city": "南米納斯",
+            "place": "法罕莊園",
+            "photo": "/coffee/assets/images/productsImg/yellowCoffeeCup.png",
+            "type": "經典咖啡豆 | 中度烘焙",
+            "price": "$200~$600"
+        },
+        {
+            "id": 8,
+            "country": "巴西",
+            "city": "",
+            "place": "星河莊園",
+            "photo": "/coffee/assets/images/productsImg/purpleCoffeeBag.png",
+            "type": "經典咖啡豆 | 中度烘焙",
+            "price": "$200~$600"
+        },
+        {
+            "id": 9,
+            "country": "印尼",
+            "city": "蘇門答臘",
+            "place": "純波旁種 曼特寧",
+            "photo": "/coffee/assets/images/productsImg/brownCoffeeBean.png",
+            "type": "經典咖啡豆 | 輕度烘焙",
+            "price": "$350~$600"
+        },
+        {
+            "id": 10,
+            "country": "冬雪藏梅",
+            "city": "",
+            "place": "配方",
+            "photo": "/coffee/assets/images/productsImg/greenCoffeeBag.png",
+            "type": "經典咖啡豆 | 深度烘焙",
+            "price": "$280~$600"
+        }
+    ];
+</script>
