--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -8,6 +8,7 @@
     line-height: 1.2;
     letter-spacing: 0.08rem;
     text-align: center;
+    color: $primary-50;
   }
 
   .h2 {
@@ -17,8 +18,9 @@
     line-height: 1.2;
     letter-spacing: 0.08rem;
     text-align: center;
+    color: $primary-50;
   }
-  
+
   .h3 {
     font-family: 'cy2', sans-serif;
     font-weight: 400;
@@ -26,6 +28,7 @@
     line-height: 1.2;
     letter-spacing: 0.08rem;
     text-align: center;
+    color: $primary-50;
   }
 
   p {
@@ -34,6 +37,7 @@
     line-height: 1.5;
     letter-spacing: 0.1rem;
     text-align: center;
+    color: $primary-50;
   }
 
   @media (max-width: 768px) {
@@ -146,15 +150,16 @@
         padding-top: 40px;
         padding-left: 12px;
         padding-right: 12px;
-        padding-bottom: 109px;
+        padding-bottom: 109px;        
       }
 
       .coffee-type {
-        font-weight: 700;       
+        font-weight: 700;
         font-size: 14px;
         line-height: 1.5;
         letter-spacing: 2px;
         text-align: center;
+        color: $primary-700 ;
       }
 
       .coffee-name {
@@ -163,16 +168,17 @@
         line-height: 1.5;
         letter-spacing: 2px;
         text-align: center;
+        color: $primary-950 ;
       }
 
       .coffee-price {
-        font-weight: 700;       
+        font-weight: 700;
         font-size: 18px;
         line-height: 1.5;
         letter-spacing: 2px;
         text-align: center;
+        color: $primary-950 ;
       }
-
     }
 
     // 大小
@@ -184,15 +190,37 @@
     // 設置背景混和模式為相乘模式
     background-blend-mode: multiply;
 
+    // 卡片
     .choosecard {
+      cursor: pointer; //滑鼠指標
+
       background-color: $grey-0 ;
       text-align: center;
 
       &:hover {
         background-color: $primary-200 ;
       }
+
+      p {
+        color: $primary-950 ;
+      }
     }
+  }
+}
 
+.hearticon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer; //滑鼠指標
 
+  .bi-heart {
+    font-size: 36px;
+    color: $grey-300;
+  }
+
+  .bi-heart-fill {
+    font-size: 36px;
+    color: $primary-950;
   }
 }
