0909漢堡排效果

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -3,7 +3,7 @@
     <div class="row align-items-center">
       <!-- 左側 breadcrumb -->
       <div class="col-2 col-md-4">
-        <nav class="navbar nav-padding navbar-expand-md nav-font-size">
+        <nav class="navbar navbar-dark nav-padding navbar-expand-md nav-font-size">
           <!-- RWD漢堡選單  拉出選單尚未設置-->
           <button
             class="navbar-toggler border-0"
@@ -16,9 +16,9 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <!-- breadcrumb -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent py-18">
-            <ol class="breadcrumb me-auto mb-2 mb-lg-0 color-primary-50">
-              <li class="breadcrumb-item header-hover">
+          <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
+            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
+              <li class="breadcrumb-item nav-item header-hover">
                 <a
                   class="nav-link d-inline-block p-12"
                   aria-current="page"
@@ -26,7 +26,7 @@
                   >關於羊蹄</a
                 >
               </li>
-              <li class="breadcrumb-item header-hover">
+              <li class="breadcrumb-item navbar-item header-hover">
                 <a
                   class="nav-link d-inline-block p-12"
                   aria-current="page"
@@ -34,7 +34,7 @@
                   >線上商店</a
                 >
               </li>
-              <li class="breadcrumb-item header-hover">
+              <li class="breadcrumb-item navbar-item header-hover">
                 <a
                   class="nav-link d-inline-block p-12"
                   aria-current="page"
@@ -42,7 +42,7 @@
                   >探索風味</a
                 >
               </li>
-            </ol>
+            </ul>
           </div>
         </nav>
       </div>
