0909更新圖片路徑

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -59,14 +59,14 @@
         <nav class="d-flex align-items-center gap-3">
           <a class="nav-link p-12 me-12" href="#">
             <img
-              src="/assets/images/ic_Shopping_Cart.svg"
+              src="/public/images/ic_Shopping_Cart.svg"
               alt="購物車"
               width="26"
               height="26" />
           </a>
           <a class="nav-link p-12" href="#">
             <img
-              src="/assets/images/ic_User.svg"
+              src="/public/images/ic_User.svg"
               alt="會員"
               width="24"
               height="30" />
