--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -30,23 +30,25 @@
   background-color:#FCFAF8;
 }
 
+.products-nav{
+  .nav-underline{
+    gap: 0px;
+  }
 
+  .nav-link{
+    color: $grey-500;
+  }
 
-.products-nav .nav-underline{
-  gap: 0px;
+  a:hover,:focus{
+    color: $primary-800;
+    border-bottom-width: 2px;
+  }
 }
 
-// .products-nav a{
-//   color: grey-500;
-// }
-
-// .products-nav .nav-link:checked{
-//   color: white;
-// }
-
-// .products-nav .nav-link:visited{
-//   color:black;
-// }
+.nav-underline .nav-link.active{
+  color: $grey-500;
+  font-weight: 400;
+}
 
 .products-link .card{
   border: 0px;
@@ -73,6 +75,34 @@
     border-bottom-right-radius: 16px;
   }
 }
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+    background: url(/assets/images/ic_User.png) no-repeat;
+    background-size: contain;
+    cursor: pointer;
+}
+
+input[type="search"]::-webkit-search-cancel-button:hover {
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+    background: url(图片路径) no-repeat;
+    background-size: contain;
+    cursor: pointer;
+}
+
+// .DocSearch-Reset{
+//   border: 0px;
+//   background-color: transparent;
+//   display: none;
+// }
+
+// .form-control:focus + .DocSearch-Reset{
+//     display: block;
+// }
 
 .ratio>*{
   left: auto;
