index圖片路徑修改

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -13,7 +13,7 @@ body {
   .header1 {
     height: calc(100vh - 88px);
     background-size: cover;
-    background-image: url(/assets/images/index/banner1.png);
+    background-image: url(/images/index/banner1.png);
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
@@ -22,7 +22,7 @@ body {
   .header2 {
     height: calc(100vh - 88px);
     background-size: cover;
-    background-image: url(/assets/images/index/banner2.png);
+    background-image: url(/images/index/banner2.png);
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
@@ -31,7 +31,7 @@ body {
   .explore-ad {
     height: 454px;
     background-size: cover;
-    background-image: url(/assets/images/index/explore-ad.jpg);
+    background-image: url(/images/index/explore-ad.jpg);
     background-repeat: no-repeat;
     background-position: 50% 60%;
     position: relative;
