--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -187,6 +187,10 @@
           background-color: $primary-50 ;
         }
       }
+
+      a{
+        text-decoration: none;
+      }
     }
 
     // 大小
