--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -56,7 +56,7 @@
 
       <!-- 右側購物車 & 會員  RWD會消失-->
       <div class="col-4 col-md-4">
-        <nav class="d-flex align-items-center gap-3">
+        <nav class="d-flex justify-content-end gap-3">
           <a class="nav-link p-12 me-12" href="#">
             <img
               src="/public/images/header/ic_Shopping_Cart.svg"
