--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -56,25 +56,26 @@
   overflow: hidden;
 }
 
-.products-link .card:hover{
-  border: $primary-100 1px solid;
-  border-radius: 16px;
+// 平板以下不用hover
+// .products-link .card:hover{
+//   border: $primary-100 1px solid;
+//   border-radius: 16px;
   
-  .card-img-top{
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-  }
+//   .card-img-top{
+//     border-top-left-radius: 16px;
+//     border-top-right-radius: 16px;
+//     border-bottom-left-radius: 0px;
+//     border-bottom-right-radius: 0px;
+//   }
 
-  .card-body{
-    background-color: $primary-50;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    border-bottom-left-radius: 16px;
-    border-bottom-right-radius: 16px;
-  }
-}
+//   .card-body{
+//     background-color: $primary-50;
+//     border-top-left-radius: 0px;
+//     border-top-right-radius: 0px;
+//     border-bottom-left-radius: 16px;
+//     border-bottom-right-radius: 16px;
+//   }
+// }
 
 input[type="search"]::-webkit-search-cancel-button {
     -webkit-appearance: none;
@@ -131,9 +132,10 @@ input[type="search"]::-webkit-search-cancel-button:hover {
   opacity: 1;
 }
 
-.productsHeart:hover + .products-heartFilled{
-  opacity: 1;
-}
+// 平板以下不用hover
+// .productsHeart:hover + .products-heartFilled{
+//   opacity: 1;
+// }
 
 .products-heartOutlined {
   position: absolute;
@@ -222,4 +224,28 @@ input[type="search"]::-webkit-search-cancel-button:hover {
     line-height: 1.5;
     letter-spacing: 2px;
   }
+
+  .productsHeart:hover + .products-heartFilled{
+  opacity: 1;
+}
+
+.products-link .card:hover{
+  border: $primary-100 1px solid;
+  border-radius: 16px;
+  
+  .card-img-top{
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+
+  .card-body{
+    background-color: $primary-50;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
+}
 }
