--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -15,7 +15,7 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- breadcrumb -->
+          <!-- nav -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
             <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
@@ -48,23 +48,23 @@
       </div>
 
       <!-- 中間 logo -->
-      <div class="col-6 col-md-4 text-center">
+      <div class="col-8 col-md-4 text-center">
         <div class="logo-wrap d-flex justify-content-center flex-grow-1 py-16">
           <a class="navbar-brand logo d-inline-block" href="index.html"></a>
         </div>
       </div>
 
-      <!-- 右側購物車 & 會員  RWD會消失-->
-      <div class="col-4 col-md-4">
+      <!-- 右側購物車 & 會員 -->
+      <div class="col-2 col-md-4">
         <nav class="d-flex justify-content-end gap-3">
-          <a class="nav-link p-12 me-12" href="#">
+          <a class="nav-link me-12 icon" href="#">
             <img
               src="/public/images/header/ic_Shopping_Cart.svg"
               alt="購物車"
               width="26"
               height="26" />
           </a>
-          <a class="nav-link p-12" href="#">
+          <a class="nav-link icon" href="#">
             <img
               src="/public/images//header/ic_User.svg"
               alt="會員"
