--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -2,7 +2,7 @@
   .header1{
     height: 400px-88px;
     background-size: cover;
-    background-image: url(/assets/images/index/banner2.png);
+    background-image: url(/images/index/banner2.png);
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
@@ -12,7 +12,7 @@
   .header2{
     height: 400px-88px;
     background-size: cover;
-    background-image: url(/assets/images/products/banner1.png);
+    background-image: url(/images/products/banner1.png);
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
