--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -15,7 +15,7 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <!-- nav -->
+          <!-- 折疊內容 -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
             <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
