--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -62,6 +62,12 @@
   margin-left: 20px;
 }
 
+.service-title{
+  padding-top: 120px ;
+  padding-bottom: 32px;
+  margin-bottom: 0;
+}
+
 .btn-pd{
   padding: 16px 40px;
 }
@@ -75,3 +81,6 @@
   max-width: 100%;
 }
 
+.accordion {
+  --bs-accordion-bg: transparent;
+}
