修改圖片路徑不用/public/

--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -1,7 +1,7 @@
 .about-1{
   height: 400px;
   background-size: cover;
-  background-image: url(/public/images/index/banner1.png);
+  background-image: url(/images/index/banner1.png);
   background-repeat: no-repeat;
   background-position: center center;
   position: relative;
@@ -59,7 +59,7 @@
   max-width: 100%;
   height: 667px;
   background-size: cover;
-  background-image: url(/public/images/index/banner3.png);
+  background-image: url(/images/index/banner3.png);
   background-repeat: no-repeat;
   background-position:  top 50%;
   position: relative;
