--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -59,14 +59,14 @@
         <nav class="d-flex justify-content-end gap-3">
           <a class="nav-link me-12 icon" href="#">
             <img
-              src="/public/images/header/ic_Shopping_Cart.svg"
+              src="/images/header/ic_Shopping_Cart.svg"
               alt="購物車"
               width="26"
               height="26" />
           </a>
           <a class="nav-link icon" href="#">
             <img
-              src="/public/images//header/ic_User.svg"
+              src="/images//header/ic_User.svg"
               alt="會員"
               width="24"
               height="30" />
