--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -5,7 +5,7 @@
                 <!-- logo -->
                 <div class="col-3 col-md-4">
                     <div><a href="index.html">
-                            <img src="/public/images//header/Logo.svg" alt="品牌 Logo" width="240" height="56" />
+                            <img src="/images//header/Logo.svg" alt="品牌 Logo" width="240" height="56" />
                         </a></div>
                 </div>
                 <!-- 店家資訊 -->
