--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -17,10 +17,10 @@
           </button>
           <!-- 折疊內容 -->
           <div class="collapse navbar-collapse py-18" id="navbarSupportedContent">
-            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-lg-0 color-primary-50">
+            <ul class="breadcrumb navnar-nav me-auto mb-2 mb-md-0 color-primary-50">
               <li class="breadcrumb-item nav-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="about.html"
                   >關於羊蹄</a
@@ -28,7 +28,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="products.html"
                   >線上商店</a
@@ -36,7 +36,7 @@
               </li>
               <li class="breadcrumb-item navbar-item header-hover">
                 <a
-                  class="nav-link d-inline-block p-12"
+                  class="nav-link d-inline-block"
                   aria-current="page"
                   href="explore.html"
                   >探索風味</a
