header logo url

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -54,7 +54,7 @@
   display: inline-block;
   width: 240px;
   height: 56px;
-  background: url("/images//header/Logo.svg") no-repeat center / contain;
+  background: url("/images/header/Logo.svg") no-repeat center / contain;
 }
 
 .logo:hover {
