--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -300,5 +300,17 @@ body {
   .heading-xxlarge{
     font-size: 28px;
   }
+  .w-256{
+    width: 256px;
+  }
+  .label-small{
+    font-size: 12px;
+  }
+  .paragraph-medium{
+    font-size: 16px;
+  }
+  .label-medium{
+    font-size: 16px;
+  }
   }
 }
