--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -156,7 +156,7 @@ body {
     background-repeat: no-repeat;
     background-position: 50% 60%;
     position: relative;
-    background-color: rgba(#5F300F, 0.35);
+    background-color: rgba(#5F300F, 0.5);
     background-blend-mode: multiply;
   }
 
@@ -282,35 +282,65 @@ body {
     .horizontal-line {
       width: 40px;
     }
-    .moon {
-    height: 100vh;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
 
-    .vh-80 {
-      height: 90vh;
+    .moon {
+      height: 100vh;
+      padding-top: 5vh;
+      padding-bottom: 5vh;
+
+      .vh-80 {
+        height: 90vh;
+      }
     }
   }
-  }
 
-  .index2{
-    .heading-small{
-    font-size: 20px;
-  }
-  .heading-xxlarge{
-    font-size: 28px;
-  }
-  .w-256{
-    width: 256px;
-  }
-  .label-small{
-    font-size: 12px;
-  }
-  .paragraph-medium{
-    font-size: 16px;
-  }
-  .label-medium{
-    font-size: 16px;
-  }
+  .index2 {
+    .heading-small {
+      font-size: 20px;
+    }
+
+    .heading-xxlarge {
+      font-size: 28px;
+    }
+
+    .w-256 {
+      width: 256px;
+    }
+
+    .label-small {
+      font-size: 12px;
+    }
+
+    .paragraph-medium {
+      font-size: 14px;
+    }
+
+    .label-medium {
+      font-size: 14px;
+    }
+
+    .heading-xxxlarge {
+      font-size: 24px;
+    }
+
+    .paragraph-xlarge {
+      font-size: 18px;
+    }
+
+    .explore-ad {
+      height: 360px;
+    }
+
+    .paragraph-medium {
+      font-size: 14px;
+    }
+
+    .feedback {
+      width: 360px;
+    }
+
+    .box {
+      height: 200px;
+    }
   }
 }
