--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -11,6 +11,7 @@
 
 //customer variables
 @import "./customize/variables";
+@import "./customize/utils";
 
 //bootstrap
 @import "../../node_modules/bootstrap";
