--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -30,6 +30,10 @@ body {
     letter-spacing: 0.3em;
   }
 
+  .end{
+    justify-content: end;
+  }
+
   .header1 {
     height: calc(100vh - 88px);
     background-size: cover;
