--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -111,12 +111,28 @@
   }
 }
 
-.mt-md-120{
-  margin-top: 120px;
+
+
+.service-mb80{
+  margin-bottom: 80px;
 }
 
-.mb-md-80{
+@media (max-width:767) {
+  .service-mb80{
+    margin-bottom: 40px;
+  } 
+}
+
+.service-title{
+  margin-top: 120px;
   margin-bottom: 80px;
+}
+
+@media (max-width:767) {
+  .service-title{
+    margin-top: 40px;
+    margin-bottom: 40px;
+  } 
 }
 
 .service{
@@ -141,10 +157,49 @@
   p{
     @include paragraph-large;
   }
+
+  ul{
+    @include paragraph-large;
+  }
+
+  @media (max-width:767px) {
+    h2{
+      @include heading-medium;
+    }
+
+    h3{
+      @include heading-small;
+    }
+
+    h4{
+      @include heading-xsmall;
+    }
+
+    h5{
+      @include label-xsmall;
+    }
+
+    p{
+      @include paragraph-small;
+    }
+
+    ul{
+      @include paragraph-small;
+    }
+  }
 }
 
-
-
+/* 讓圖片滿版並跟文字區塊等高 */
+.booking-right img {
+  object-fit: cover;  /* 填滿區域，不變形 */
+  weight:100%;
+  height: 100%;
+  display: block;
+}
+.book.service-title {
+  margin: 0;   /* 取消 margin */
+  padding: 0;  /* 取消 padding */
+}
 
 .service-horizontal{
   width: 80px;
@@ -155,11 +210,6 @@
   margin-left: 20px;
 }
 
-.service-title{
-  padding-top: 120px ;
-  padding-bottom: 32px;
-  margin-bottom: 0;
-}
 
 .btn-pd{
   padding: 16px 40px;
@@ -169,11 +219,26 @@
   max-width: 100%;
 }
 
+.pdl-1{
+  padding-left: 1.2rem;
+}
+
+
 // FAQ
 
 .faq{
   background-color: $primary-50;
   max-width: 100%;
+}
+
+.faq-title{
+  padding-top: 120px;
+  padding-bottom: 32px;
+}
+@media (max-width:767px) {
+  .faq-title{
+    padding-top: 40px;
+  }
 }
 
 .accordion {
