--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -126,14 +126,15 @@
 .service-title{
   margin-top: 120px;
   margin-bottom: 80px;
+
+  @media (max-width:767px) {
+    
+      margin-top: 40px;
+      margin-bottom: 40px;
+    
+  }
 }
 
-@media (max-width:767) {
-  .service-title{
-    margin-top: 40px;
-    margin-bottom: 40px;
-  } 
-}
 
 .service{
   h2{
@@ -234,10 +235,28 @@
 .faq-title{
   padding-top: 120px;
   padding-bottom: 32px;
+
+  h2{
+    @include heading-xxlarge; 
+    color:$primary-950;
+    letter-spacing: 11px;
+  }
+
+  h3{
+    @include heading-small; 
+    color: $accent-300; 
+  }
 }
 @media (max-width:767px) {
   .faq-title{
     padding-top: 40px;
+  }
+
+  h2{
+    @include heading-medium;
+  }
+  h3{
+    @include heading-xsmall;
   }
 }
 
