--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -92,7 +92,7 @@
      letter-spacing: 0.1em;
  }
 
- .paragraph-xlarge{
+@mixin paragraph-xlarge{
      font-family: "Noto Sans TC", sans-serif;
      font-weight: 400;
      font-size: 20px;
