產品列表修改

--- a/assets/scss/pages/_productdetail.scss
+++ b/assets/scss/pages/_productdetail.scss
@@ -15,4 +15,21 @@
 }
 
 .breadcrumb-item.active { 
-  color:$primary-900; }
+  color:$primary-900; 
+}
+
+
+.horizontal-line2 {
+    flex-grow: 1;
+    height: 1.5px;
+    background-color: #715737;
+}
+
+.paragraph-xlarge {
+      font-size: 18px;
+}
+
+
+
+
+  
