--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -17,7 +17,7 @@
 @import "../../node_modules/bootstrap";
 
 //customer utiles
-// @import "./customize/utils";
+@import "./customize/utils";
 
 //Utilities
 @import "../../node_modules/bootstrap/scss/utilities/api";
