修改遮罩顏色

--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -68,7 +68,7 @@
       padding-bottom: 552px;
 
       // 透明度 半透明遮罩
-      background-color: rgba(49, 32, 0, 0.4);
+      background-color: rgba(#312000, 0.4);
 
       @media (max-width: 768px) {
         padding-top: 297px;
@@ -87,7 +87,7 @@
       padding-bottom: 220px;
 
       // 透明度 半透明遮罩
-      background-color: rgba(49, 32, 0, 0.55);
+      background-color: rgba(#312000, 0.55);
 
       @media (max-width: 768px) {
         padding-top: 40px;
@@ -106,7 +106,7 @@
       padding-bottom: 220px;
 
       // 透明度 半透明遮罩
-      background-color: rgba(49, 32, 0, 0.3);
+      background-color: rgba(#312000, 0.3);
 
       @media (max-width: 768px) {
         padding-top: 40px;
@@ -125,7 +125,7 @@
       padding-bottom: 220px;
 
       // 透明度 半透明遮罩
-      background-color: rgba(49, 32, 0, 0.75);
+      background-color: rgba(#312000, 0.75);
 
       @media (max-width: 768px) {
         padding-top: 40px;
@@ -144,7 +144,7 @@
       padding-bottom: 165px;
 
       // 透明度 半透明遮罩
-      background-color: rgba(49, 32, 0, 0.75);
+      background-color: rgba(#312000, 0.75);
 
       @media (max-width: 768px) {
         padding-top: 40px;
